@@ -54,6 +54,13 @@ Version 0.7.3 UNRELEASED
     (In other words, it was missing in 1 of these 4 places where it is
     necessary).
 
+  * Disable obsolete checks in configure.ac and preprocessor checks in code for
+    APT_HAS_TRIGGERS, APT_HAS_HOMEPAGE and HAVE_DDTP.
+
+    The support for these functionalities has been present in all involved tools
+    since 2007-2008 or earlier, so it is safe to disable the checks and the
+    dead code.
+
 
 [2015-09-17]
 Version 0.7.2
